Fix for quote section spacing.

--- a/Funemployment/Funemployment/wwwroot/styles/profile.css
+++ b/Funemployment/Funemployment/wwwroot/styles/profile.css
@@ -95,6 +95,10 @@ p > a {
 	font-weight: 700;
 }
 
+#card_quote {
+	line-height: 1rem;
+}
+
 hr {
 	border: none;
 	height: 1px;
